@@ -103,3 +103,7 @@
 	processing a CGI object with no POST fields.
 2016-01-04 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 0.5.2.
+2016-01-06 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'sync()' call after modifying system files in
+	'src/webhostd/upgrade.cpp', 'src/webhostd/ip.cpp' and
+	'src/webhostd/ntp.cpp'.
